# A-way-back-home

./: .gitignore  Cargo.toml  TODO.md  TODO.txt  wsl.sh  wslclippy.sh  wsllaunch.sh
assets/index/: sprites.json
assets/misc/: credits.txt
assets/scenes/: new-test-scene.scn.ron  scene-1.ldtk  test-scene.scn.ron  test-world.ldtk
assets/sprites/player/: Sprite-0001.aseprite
src/: components.rs  entity.rs  error.rs  macros.rs  main.rs  menu.rs  player.rs  render.rs  util.rs  utils.rs  world.rs
src/components/: mod.rs
src/player/: component.rs  mod.rs  movement.rs
src/render/: animation.rs  camera.rs  mod.rs
src/world/: level.rs  level_settings.rs  mod.rs
