[package]
name = "a-way-back-home"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1"
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
