[package]
name = "a-way-back-home"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.2"
bevy = { version = "0.15" }
bevy-tnua = "0.21.0"
bevy-tnua-avian2d = "0.2.0"
bevy_ecs_ldtk = { version = "0.11.0", features = ["atlas"] }
derive_more = { version = "1.0.0", features = ["deref"] }
serde = "1.0.217"
serde_json = "1.0.134"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
